--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
   client:
     container_name: client
-    build: client/.
+    build: client
     ports:
       - 3000:3000
     volumes:
@@ -12,7 +12,7 @@ services:
 
   api:
     container_name: server
-    build: server/.
+    build: server
     depends_on:
       - db
     ports:
