--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "build": "tsc --project ./",
+    "build": "tsc --project ",
     "start:prod": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
